--- a/style.css
+++ b/style.css
@@ -5,12 +5,21 @@
 }
 
 div {
-    height: 1px;
-    width: 1px;
-    background-color: #60ff00;
-    position: absolute;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: fixed;
+    top: 8%;
+    left: 2%;
+    color: greenyellow;
 }
-
+h3 {
+    background-color: #2b2b2c;
+    border-radius: 20px;
+    padding: 4px;
+    text-align: center;
+}
 ::-webkit-scrollbar {
     display: none;
 }
@@ -23,5 +32,6 @@ body {
     justify-content: center;
 }
 
-section {
+canvas {
+    image-rendering: pixelated;
 }
